[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.setuptools_scm]
"write_to" = "src/zhinst/utils/_version.py"
"local_scheme" = "no-local-version"

[tool.black]
line-length = 88
target-version = ['py37']
