[metadata]
name = zhinst-utils
author = Zurich Instrument
author_email = info@zhinst.com
description = Zurich Instruments utils for device control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhinst/zhinst-utils
project_urls =
    Bug Tracker = https://github.com/zhinst/zhinst-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7
install_requires =
    numpy>=1.14
    zhinst-core>=23.02
use_scm_version = True

[options.packages.find]
where = src
include = zhinst.*

[flake8]
max-line-length = 88
ignore =
    # Line break before binary operator (conflicts with black)
    W503,
    # Missing docstring in __init__ (Dostring in class definition.)
    D107,
    # Missing docstring in magic method
    D105,
    # Name may be undefined, or defined from star imports: module
    F405,F403
exclude =
    .git,
    .tox
    __pycache__,
    .ipynb_checkpoints,
    tests
    venv*
    build
    docs
    examples
    src/zhinst/utils/shf_sweeper.py
per-file-ignores =
    # disable unused-imports errors on __init__.py
    __init__.py: F401
docstring-convention=google

[mypy]
ignore_missing_imports = True
